--- a/server/config/config.json
+++ b/server/config/config.json
@@ -7,6 +7,7 @@
     "dialect": "mysql",
     "timezone": "+09:00",
     "dialectOptions": {
+      "charset": "utf8mb4",
       "dateStrings": true,
       "typeCast": true
     }
@@ -19,6 +20,7 @@
     "dialect": "mysql",
     "timezone": "+09:00",
     "dialectOptions": {
+      "charset": "utf8mb4",
       "dateStrings": true,
       "typeCast": true
     }
@@ -31,6 +33,7 @@
     "dialect": "mysql",
     "timezone": "+09:00",
     "dialectOptions": {
+      "charset": "utf8mb4",
       "dateStrings": true,
       "typeCast": true
     }
