--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,9 +1,10 @@
 {
   "development": {
-    "username": "root",
+    "username": "admin",
     "password": "sktkfka5",
     "database": "remembertrip_development",
-    "host": "127.0.0.1",
+    "host": "remember-trip-side.coe5erwjzpjy.ap-northeast-2.rds.amazonaws.com",
+    "port": 13306,
     "dialect": "mysql",
     "timezone": "+09:00",
     "dialectOptions": {
@@ -13,7 +14,7 @@
     }
   },
   "test": {
-    "username": "root",
+    "username": "admin",
     "password": "sktkfka5",
     "database": "remembertrip_test",
     "host": "127.0.0.1",
@@ -26,7 +27,7 @@
     }
   },
   "production": {
-    "username": "root",
+    "username": "admin",
     "password": "sktkfka5",
     "database": "remembertrip_production",
     "host": "127.0.0.1",
