--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "admin",
+    "username": "root",
     "password": "sktkfka5",
     "database": "remembertrip_development",
     "host": "127.0.0.1",
