--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "admin",
-    "password": "sktkfka5",
+    "password": "12345678",
     "database": "remembertrip_development",
-        "host": "remember-trip-side.coe5erwjzpjy.ap-northeast-2.rds.amazonaws.com",
+    "host": "remember-trip-side.coe5erwjzpjy.ap-northeast-2.rds.amazonaws.com",
     "port": 13306,
     "dialect": "mysql",
     "timezone": "+09:00",
@@ -15,7 +15,7 @@
   },
   "test": {
     "username": "admin",
-    "password": "sktkfka5",
+    "password": "12345678",
     "database": "remembertrip_test",
     "host": "127.0.0.1",
     "dialect": "mysql",
@@ -28,7 +28,7 @@
   },
   "production": {
     "username": "admin",
-    "password": "sktkfka5",
+    "password": "12345678",
     "database": "remembertrip_production",
     "host": "remember-trip-side.coe5erwjzpjy.ap-northeast-2.rds.amazonaws.com",
     "port": 13306,
