--- a/client/package.json
+++ b/client/package.json
@@ -19,16 +19,29 @@
   },
   "homepage": "https://github.com/Yquick/remember-trip#readme",
   "dependencies": {
+    "@babel/runtime": "^7.17.9",
+    "axios": "^0.26.1",
+    "babel-polyfill": "^6.26.0",
+    "moment": "^2.29.2",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-datepicker": "^4.7.0",
+    "react-dates": "^21.8.0",
+    "react-dom": "^18.0.0",
+    "react-flags-select": "^2.1.2",
+    "react-modal": "^3.14.4",
+    "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.8",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
     "babel-plugin-styled-components": "^2.0.6",
+    "css-loader": "^6.7.1",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -37,10 +50,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "prettier": "2.6.2",
-    "styled-components": "^5.3.5",
-    "webpack": "^5.71.0",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.50.0",
+    "sass-loader": "^10.2.1",
+    "style-loader": "^3.3.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.0"
   }
