--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -2,15 +2,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "./*"
-      ],
-      "@/*": [
-        "./src/*"
-      ],
+      "~/*": ["./*"],
+      "@/*": ["./src/*"]
     }
   },
-  "exclude": [ // 제외할 파일
+  "exclude": [
+    // 제외할 파일
     "node_modules",
     "dist"
   ]
